# Limbus

./: .dockerignore  .env.example  .gitignore  .gitmodules  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTION.md  Dockerfile.pb  NOTICE  README.md  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: SECURITY.md
.github/workflows/: release-pr.yml  release.yml
apps/app/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.workspace.ts
apps/app/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json  tauri.windows.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: lib.rs  main.rs  models.rs  sam3_worker.rs  self_check.rs
apps/website/: index.html  package.json  vite.config.ts
design-system/: README.md  SKILL.md
docker/: app.Dockerfile  nginx.conf  website.Dockerfile
docs/release/: RELEASE_CHECKLIST.md  SECRETS.md  SETUP.md
pb/: pocketbase.sha256
pb/pb_migrations/: 1776700800_init_images.js  1776700900_init_videos.js  1776785200_widen_video_mimes.js  1777000000_add_deleted_at.js  1777200000_init_segmentations.js  1777300000_add_active_indexes.js  1777400000_init_projects.js  1777400100_add_project_fk.js  1777400200_init_tags.js  1777400300_project_active_indexes.js  1777400500_add_project_kind.js  1777400600_init_canvas_nodes.js  1777400700_init_canvas_edges.js  1777400800_canvas_node_coords_optional.js  1777400900_drop_canvas_nodes_start_unique.js  1777401000_add_node_io_fields.js  1777401100_node_examples.js
scripts/: build-sam3.mjs  dev-pocketbase.mjs  sam3-artifacts.mjs  sam3-artifacts.test.mjs  stage-pocketbase.mjs  tauri-build.mjs
scripts/release/: bump-version.mjs  download-stats.mjs  fetch-pocketbase.mjs  patch-rpath.mjs  sign-mac.mjs  sign-windows.mjs  sync-latest-json.mjs  verify-mac-binary.mjs
src/: App.css  App.tsx  Canvas.tsx  InfiniteCanvas.css  InfiniteCanvas.tsx  main.tsx  router.tsx
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CountUp.tsx  FloatingSidebar.tsx  HighlightInput.tsx  SettingsModal.tsx
src/hooks/: useRevealOnScroll.ts
src/landing/: Footer.tsx  Header.tsx  (+2 more)
(+394 files in other folders)
