[package]
name = "netrart"
version = "0.1.0"
description = "NetraRT desktop"
authors = ["NetraRT"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "netrart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sam3 = { path = "../../../vendor/sam3.c/bindings/rust/sam3" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
