[package]
name = "netrart"
version = "0.2.0"
description = "NetraRT desktop"
authors = ["NetraRT"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "netrart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sam3 = { path = "../../../vendor/sam3.c/bindings/rust/sam3" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["sync"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
